// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideNav > should match the snapshot 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                SUBSCRIBE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                PROVIDE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-uouv2j-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
            href="/it/ente"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
              >
                PARTY_REGISTRY
              </p>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
      </ul>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
      />
      <ul
        class="MuiList-root MuiList-padding css-1y8vw3r-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-oyxsy6-MuiButtonBase-root-MuiListItemButton-root"
            href="https://uat.selfcare.pagopa.it/dashboard/selfcareId/users#prod-interop"
            tabindex="0"
            target="_blank"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                data-testid="PeopleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-10hburv-MuiTypography-root"
              >
                sidenav.userExternalLinkLabel
              </span>
            </div>
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium css-11pbyhm-MuiSvgIcon-root"
                data-testid="ExitToAppRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.79 16.29c.39.39 1.02.39 1.41 0l3.59-3.59c.39-.39.39-1.02 0-1.41L12.2 7.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L12.67 11H4c-.55 0-1 .45-1 1s.45 1 1 1h8.67l-1.88 1.88c-.39.39-.38 1.03 0 1.41zM19 3H5c-1.11 0-2 .9-2 2v3c0 .55.45 1 1 1s1-.45 1-1V6c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v12c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1v3c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-oyxsy6-MuiButtonBase-root-MuiListItemButton-root"
            href="https://uat.selfcare.pagopa.it/dashboard/selfcareId/groups"
            tabindex="0"
            target="_blank"
          >
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
                data-testid="SupervisedUserCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.99 2c-5.52 0-10 4.48-10 10s4.48 10 10 10 10-4.48 10-10-4.48-10-10-10zm3.61 6.34c1.07 0 1.93.86 1.93 1.93 0 1.07-.86 1.93-1.93 1.93-1.07 0-1.93-.86-1.93-1.93-.01-1.07.86-1.93 1.93-1.93zm-6-1.58c1.3 0 2.36 1.06 2.36 2.36 0 1.3-1.06 2.36-2.36 2.36s-2.36-1.06-2.36-2.36c0-1.31 1.05-2.36 2.36-2.36zm0 9.13v3.75c-2.4-.75-4.3-2.6-5.14-4.96 1.05-1.12 3.67-1.69 5.14-1.69.53 0 1.2.08 1.9.22-1.64.87-1.9 2.02-1.9 2.68zM11.99 20c-.27 0-.53-.01-.79-.04v-4.07c0-1.42 2.94-2.13 4.4-2.13 1.07 0 2.92.39 3.84 1.15-1.17 2.97-4.06 5.09-7.45 5.09z"
                />
              </svg>
            </div>
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-10hburv-MuiTypography-root"
              >
                sidenav.groupsExternalLinkLabel
              </span>
            </div>
            <div
              class="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorAction MuiSvgIcon-fontSizeMedium css-11pbyhm-MuiSvgIcon-root"
                data-testid="ExitToAppRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10.79 16.29c.39.39 1.02.39 1.41 0l3.59-3.59c.39-.39.39-1.02 0-1.41L12.2 7.7a.9959.9959 0 0 0-1.41 0c-.39.39-.39 1.02 0 1.41L12.67 11H4c-.55 0-1 .45-1 1s.45 1 1 1h8.67l-1.88 1.88c-.39.39-.38 1.03 0 1.41zM19 3H5c-1.11 0-2 .9-2 2v3c0 .55.45 1 1 1s1-.45 1-1V6c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v12c0 .55-.45 1-1 1H6c-.55 0-1-.45-1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1v3c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;

exports[`SideNav > should match the snapshot in loading state (skeleton) 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-15zi390-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  style="width: 120px;"
                />
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </li>
          <ul
            class="MuiList-root css-13i2vi2-MuiList-root"
          />
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-15zi390-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  style="width: 120px;"
                />
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
              data-testid="ExpandLessIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
          </li>
          <ul
            class="MuiList-root css-13i2vi2-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
          </ul>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
      </ul>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
      />
      <ul
        class="MuiList-root MuiList-padding css-1y8vw3r-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;

exports[`SideNav > should match the snapshot while user api operator 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                SUBSCRIBE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                PROVIDE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-uouv2j-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
            href="/it/ente"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
              >
                PARTY_REGISTRY
              </p>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;

exports[`SideNav > should match the snapshot while user is security and api operator 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                SUBSCRIBE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                PROVIDE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-uouv2j-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
            href="/it/ente"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
              >
                PARTY_REGISTRY
              </p>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;

exports[`SideNav > should match the snapshot while user security operator 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-1jolfkj"
        >
          <div
            class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-1w56b9-MuiButtonBase-root-MuiListItemButton-root"
            color="inherit"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-odxlfz-MuiTypography-root"
              >
                SUBSCRIBE
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </div>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-12doaz5-MuiListItem-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters MuiListItemButton-root MuiListItemButton-gutters css-uouv2j-MuiTypography-root-MuiLink-root-MuiButtonBase-root-MuiListItemButton-root"
            href="/it/ente"
            tabindex="0"
          >
            <div
              class="MuiListItemText-root css-7zx3z7-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ksyvbn-MuiTypography-root"
              >
                PARTY_REGISTRY
              </p>
            </div>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </a>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;

exports[`SideNavSkeleton > should match the snapshot 1`] = `
<body>
  <div>
    <nav
      class="MuiBox-root css-15sxj0r"
    >
      <ul
        class="MuiList-root css-1dc7nhp-MuiList-root"
      >
        <div
          class="MuiBox-root css-0"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-15zi390-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  style="width: 120px;"
                />
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </li>
          <ul
            class="MuiList-root css-13i2vi2-MuiList-root"
          />
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <li
            class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-15zi390-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root css-tlelie-MuiListItemText-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <span
                  class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                  style="width: 120px;"
                />
              </p>
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
              data-testid="ExpandLessIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
          </li>
          <ul
            class="MuiList-root css-13i2vi2-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
            >
              <div
                class="MuiListItemText-root css-tlelie-MuiListItemText-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <span
                    class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                    style="width: 160px;"
                  />
                </p>
              </div>
            </li>
          </ul>
        </div>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
      </ul>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1b008ma-MuiDivider-root"
      />
      <ul
        class="MuiList-root MuiList-padding css-1y8vw3r-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1nlpcw4-MuiListItem-root"
        >
          <div
            class="MuiListItemText-root css-tlelie-MuiListItemText-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              <span
                class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
                style="width: 160px;"
              />
            </p>
          </div>
        </li>
      </ul>
    </nav>
  </div>
</body>
`;
